# cubic_spline_generator

./: CMakeLists.txt  README.md
example/: #main.cpp#  .#main.cpp  main.cpp
include/cubic_spline_generator/: spline.hpp
scripts/: debug.sh
src/: spline.cpp
